--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -47,7 +47,14 @@ code {
 /* Mobile responsiveness */
 @media (max-width: 768px) {
   .ant-layout-content {
-    padding: 0 10px !important;
+    padding: 0 0px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .ant-layout-content {
+    padding: 0 0px !important;
+    margin: 6px !important;
   }
 }
 
