--- a/Frontend/src/components/VideoComments.css
+++ b/Frontend/src/components/VideoComments.css
@@ -53,13 +53,13 @@
   border-radius: 8px;
   padding: 16px;
   margin-bottom: 10px;
-  background-color: #fafafa;
-  border: 1px solid #f0f0f0;
+  /* background-color: #fafafa; */
+  border: 1px solid #d9d9d992;
   transition: all 0.3s ease;
 }
 
 .comment-list .ant-list-item:hover {
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
   transform: translateY(-2px);
 }
